dctrl-tools (2.20.1) UNRELEASED; urgency=low

  [ David Prévot ]
  * Initial German manpages translation, thanks to Chris Leick (closes:
    #651218).
  * man pages order in SEE ALSO, thanks to Chris Leick (closes: #651219).

 -- David Prévot <taffit@debian.org>  Wed, 07 Dec 2011 11:56:51 -0400

dctrl-tools (2.20) unstable; urgency=low

  * Improve the testsuite.
  * tester.sh: Do not output .differr if it wasn't constructed.
  * grep-dctrl: Make a more modest fix for #525525 in adding an --ensure-dctrl
    option that makes sure that the output (in the absence of the -n switch)
    is in dctrl format.
    - Later on we may want to make --ensure-dctrl the default.  In anticipation,
      a --compat option has been added that countermands any --ensure-dctrl.
  * grep-dctrl: With -c, output even a zero count and exit successfully.
    Closes: #641255 (grep-dctrl -c does not print out 0 when it should)
    [ Reported by Antti-Juhani Kaijanaho <ajk@debian.org> ]

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 27 Nov 2011 21:23:53 +0200

dctrl-tools (2.19) unstable; urgency=low

  [ David Prévot ]
  * Stylish fix to grep-dctrl(1) manpage (closes: #325169)
  * Makes manpages translatable (using po4a), closes: #615877
  * Fix example in manpage (closes: #589827)
  * Update French runtime translation (closes: #628013)
  * Initial French manpages translation
  
  [ Antti-Juhani Kaijanaho ]
  * Merge 2.18ubuntu1
  * debian/control [Standards-Version]: Updated to 3.6.2 (no changes needed).
  * grep-dctrl/grep-dctrl.c: Output a stanza separator unconditionally.
    Closes: #525525 (do not separate stanzas with empty lines when showing
                     Description field only)
    [Reported by Stefano Zacchiroli <zack@debian.org>]
  * lib/paragraph.[ch], grep-dctrl/grep-dctrl.c: Use the actual spelling of
    field names in output, instead of the command line spelling.
    Closes: #209134 (keyword case shouldn't be influenced by -s)